    * New util function unquoteme sister to quoteme_single & quoteme_double
    * Added --run to some admin commands
    * Fixed Admin commands create_links and svn2stage to remove target files that are not in source using the new
        preserve_dest_files flag.
    * In gui mode /Admin section, enabled to have more than one limit paths.

    programmer visible changes:
    * New methods: ConfigVarList.unresolved_var &  ConfigVarList.unresolved_var_to_list.
    * ConfigVarStack.repr_for_yaml new parameter resolve, so we can write var list to yaml without resolving. Default is resolve=True.
    * copy_dir_contents_to_dir has new option preserve_dest_files=True.
        If explicitly set to False copy_dir_contents_to_dir will try to remove target files that are not in source.
        Does not work for xcopy tool on Windows.
    * writeAsYaml will no write None values as '~' and empty strings as '""'
    * implemented requirement_of field in InstallItem
    * iids_from_guid check if input is guid and return the original iid if not.
        This will save checking by claaer of iids_from_guid.

5/11/2014 0.9.18.6

    user visible changes, client:
    * New optional variable INSTL_MINIMAL_VERSION will be compared to current instl version,
        raise exception if INSTL_MINIMAL_VERSION > __INSTL_VERSION__. Can be used to check
        compatibility between input file and instl reading it.
    * Improved removal of !dir_cont and !files sources.

4/11/2014 0.9.18.4

    user visible changes, client:
    * Enabled the removal of !dir_cont and !files sources.
    * Reading a user config file if such file exists. User config file named
        instl_config.yaml can be placed in the home folder,
        format is regular instl !define format.
        File name is in variable __USER_CONFIG_FILE_NAME__.
    * Better error message when public key cannot be determined.

    programmer visible changes: